// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "../ccsds_mal/STRING.proto";


package soo.protobuf;

message SooOperationState {
extensions 3 to 103;

  optional ccsds_mal.protobuf.STRING data = 1;
  optional ccsds_mal.protobuf.BLOB sooOperation = 2;
}
